# Steam-Deck-DVD-Ripper-Flatpak

./: README.md  flathub.json  io.github.CyDragonReborn.Steam-Deck-DVD-Ripper.json  io.github.dvdripper.app.json  pyproject.toml  requirements.txt
data/: dvd-ripper  io.github.CyDragonReborn.Steam-Deck-DVD-Ripper.desktop  io.github.CyDragonReborn.Steam-Deck-DVD-Ripper.metainfo.xml  io.github.dvdripper.app.desktop  io.github.dvdripper.app.metainfo.xml
src/dvd_ripper/: __init__.py  __main__.py  config.py  duplicates.py  encoder.py  gtk_app.py  merger.py  playlist.py  ripper.py  utils.py
